# bootcamp-python

aula-01/: desafio_bonus.py  exemplo_00.py  exemplo_01.py  exemplo_02.py  mascara.py
aula-02/: exercicios.py
aula-03/: exercicios.py  main.py
aula-04/: arquivos.py  exercicios.py  main.py
aula-06/: .flake8  .pre-commit-config.yaml  pyproject.toml
aula-06/src/: importador.py  main.py
aula-07/: .pre-commit-config.yaml  pyproject.toml
aula-07/src/: etl.py  functions.py  main.py  sales.csv
aula-08/: .pre-commit-config.yaml  coleta_total.json  coleta_total.parquet  etl.py  pipeline.py  pyproject.toml
aula-09/: pyproject.toml
aula-09/src/: log_decorator.py  log_to_sentry.py  main.py
aula-10/: pyproject.toml
aula-10/src/: Conta.py  csv_importer.py  importer.py  sales.csv
aula-11/: pyproject.toml
aula-11/data/files/: sales.txt
aula-11/src/lib/classes/: AbstractDataSource.py  FilesSources.py
aula-12/: alugar.json  pyproject.toml  scrapping.py  to_txt.py
aula-12/src/: main.py
aula-12/src/models/: item_model.py
aula-12/src/routers/: auth_routes.py  item_routes.py
aula-12/src/services/: auth_service.py
aula-13/: pyproject.toml
