[project]
name = "aula-09"
version = "0.1.0"
description = ""
authors = [
    {name = "Leonardo Souza",email = "leonardodisouza@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "sentry-sdk (>=2.20.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
